--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,19 +1,11 @@
 FROM node:12.13
 LABEL maintainer lucas.pelos@gmail.com
 
-# Install the Angular CLI & NativeScript CLI
-ENV ANGULAR_CLI_VERSION  ~8.3.15
-
-RUN npm install -g --unsafe-perm @angular/cli@${ANGULAR_CLI_VERSION}
-
 # Configure app dir and volume
 ENV APP_DIR /app
 
 VOLUME ${APP_DIR}
 WORKDIR ${APP_DIR}
-
-# Add app dependencies to PATH
-ENV PATH ${PATH}:${APP_DIR}/node_modules/.bin
 
 # dev server port
 EXPOSE 4200
@@ -26,3 +18,22 @@ EXPOSE 4000
 
 # node inspect port
 EXPOSE 9229
+
+# Add app dependencies to PATH
+ENV PATH ${PATH}:${APP_DIR}/node_modules/.bin
+
+# Install Chrome Headless test dependencies
+# Reference: https://github.com/avatsaev/angular-chrome-headless-docker/blob/master/Dockerfile
+RUN apt-get update && apt-get install -yy wget curl gnupg
+RUN wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - && \
+  echo "deb http://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google.list && \
+  apt-get update && \
+  apt-get install -y google-chrome-stable xvfb
+RUN apt update && apt install -y procps && apt clean
+RUN rm -rf /var/lib/apt/lists/*
+
+# Install the Angular CLI
+ENV ANGULAR_CLI_VERSION  ~8.3.15
+RUN npm install -g --unsafe-perm @angular/cli@${ANGULAR_CLI_VERSION}
+
+CMD ["npm", "run", "start"]
