--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --host 0.0.0.0",
     "build": "ng build",
-    "test": "ng test",
     "lint": "ng lint",
+    "start": "ng serve --host 0.0.0.0",
+    "test:chrome": "npm run test -- --browsers='Chrome'",
+    "test:headless": "npm run test -- --browsers='ChromeHeadless'",
+    "test": "ng test",
     "e2e": "ng e2e"
   },
   "private": true,
@@ -29,14 +31,14 @@
     "@angular/cli": "~8.3.15",
     "@angular/compiler-cli": "~8.2.12",
     "@angular/language-service": "~8.2.12",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
