--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "build:prod": "npm run build -- --prod --sourceMap=false",
     "build": "ng build",
     "lint": "ng lint",
     "start": "ng serve --host 0.0.0.0",
